@@ -3,13 +3,19 @@ package com.example.tastyhub.fixture.recipeReview;
 import static com.example.tastyhub.fixture.recipe.RecipeFixture.RECIPE;
 import static com.example.tastyhub.fixture.user.UserFixture.USER;
 
-import java.util.Collections;
+import com.example.tastyhub.common.domain.recipeReview.dtos.PagingMyRecipeReviewResponse;
+import com.example.tastyhub.common.utils.OrderSpecifierUtil;
+import com.querydsl.core.types.OrderSpecifier;
 import java.util.List;
 
 import com.example.tastyhub.common.domain.recipeReview.dtos.PagingRecipeReviewResponse;
 import com.example.tastyhub.common.domain.recipeReview.dtos.RecipeReviewCreateRequest;
 import com.example.tastyhub.common.domain.recipeReview.dtos.RecipeReviewUpdateRequest;
 import com.example.tastyhub.common.domain.recipeReview.entity.RecipeReview;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 
 public class RecipeReviewFixture {
     public static final RecipeReview RECIPE_REVIEW =
@@ -18,24 +24,31 @@ public class RecipeReviewFixture {
             .user(USER)
             .recipe(RECIPE)
             .grade(0L)
-            .text("text")
+            .content("text")
             .build();
     public static final RecipeReviewCreateRequest RECIPE_REVIEW_CREATE_REQUEST =
         RecipeReviewCreateRequest.builder()
             .grade(0L)
-            .text("text")
+            .content("text")
             .build();
     public static final RecipeReviewUpdateRequest RECIPE_REVIEW_UPDATE_REQUEST =
             RecipeReviewUpdateRequest.builder()
                 .grade(1L)
-                .text("new_text")
+                .content("new_text")
                 .build();
     public static final PagingRecipeReviewResponse PAGING_RECIPE_REVIEW_RESPONSE = PagingRecipeReviewResponse.builder()
         .userId(USER.getId())
         .grade(0L)
         .nickname(USER.getNickname())
-        .text("text")
+        .content("text")
         .build();
-    public static final List<PagingRecipeReviewResponse> PAGING_RECIPE_REVIEW_RESPONSES = Collections.singletonList(
-        PAGING_RECIPE_REVIEW_RESPONSE);
+
+    public static Pageable pageable = PageRequest.of(0, 1);
+
+    public static final Page<PagingRecipeReviewResponse> PAGING_RECIPE_REVIEW_RESPONSES = new PageImpl(List.of(PAGING_RECIPE_REVIEW_RESPONSE),pageable, 1);
+
+    public static final Page<PagingMyRecipeReviewResponse> PAGING_MY_RECIPE_REVIEW_RESPONSES = new PageImpl(List.of(PAGING_RECIPE_REVIEW_RESPONSE),pageable, 1);
+
+    public static OrderSpecifier<?>[] orderSpecifiers = OrderSpecifierUtil.getOrderSpecifiers(pageable, RecipeReview.class, "recipeReview");
+
 }
